# groundtruth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yaml
groundtruth/: __init__.py  cli.py  extractions.py  metrics.py  samples.py  utils.py  workflows.py
scripts/: compare_extractions.py  submit_and_retrieve.py
tests/: test_extractions.py  test_metrics.py  test_samples.py  test_utils.py
