[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "groundtruth"
version = "1.2.1"
description = "Ground Truth Analysis Tooling"
authors = [
    "Anna Liu <anna.liu@indicodata.ai>",
    "Michael Welborn <michael.welborn@indicodata.ai>",
    "Nate Shim <nate.shim@indicodata.ai>",
    "Scott Levin <scott.levin@indicodata.ai>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiometer = "^0.5.0"
arguably = "^1.3.0"
indico-client = "^6.8.0"
levenshtein = "^0.26.0"
munkres = "^1.1.4"
pathvalidate = "^3.2.1"
polars = "^1.8.2"
rich = "^13.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
coverage = "^7.6.1"
mypy = "^1.11.2"
poethepoet = "^0.29.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"

[tool.poetry.scripts]
groundtruth = "groundtruth.cli:main"

[tool.poe.tasks]
black = "black groundtruth tests"
black_check = "black --check groundtruth tests"
coverage = "coverage html"
mypy = "mypy groundtruth tests"
pytest = "pytest tests --cov=groundtruth"
ruff = "ruff check --fix-only --exit-zero groundtruth tests"
ruff_check = "ruff check groundtruth tests"

format = ["ruff", "black"]
check = ["ruff_check", "black_check", "mypy"]
test = ["pytest", "coverage"]
all = ["format", "check", "test"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]
lint.fixable = ["I"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unreachable = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = "indico.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "munkres.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstractmethod"]
