[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "groundtruth"
description = "Ground Truth Analysis Tooling"
license = "MIT"
authors = [
    { name = "Indico Solutions Engineering", email = "solutionsengineering@indicodata.ai" },
]
readme = "README.md"
requires-python = ">=3.10,<4"
version = "1.2.1"
dependencies = [
    "aiometer (>=0.5.0,<0.6)",
    "arguably (>=1.3.0,<2)",
    "indico-client (>=6.14.0,<7)",
    "indico-toolkit (>=6.14.0,<7)",
    "munkres (>=1.1.4,<2)",
    "pathvalidate (>=3.2.1,<4)",
    "polars (>=1.8.2,<2)",
    "rapidfuzz (>=3.12.2,<4.0.0)",
    "rich (>=13.9.1,<14)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.6.12"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.9.6"

[tool.poetry.requires-plugins]
poetry-plugin-shell = "^1.0.0"
poethepoet = {extras = ["poetry-plugin"], version = "^0.33.0"}

[tool.poetry.scripts]
groundtruth = "groundtruth.cli:main"

[tool.poe.tasks]
black = "black groundtruth tests"
black-check = "black --check groundtruth tests"
coverage = "coverage html"
mypy = "mypy groundtruth tests"
pytest = "pytest tests --cov=groundtruth"
ruff = "ruff check --fix-only --exit-zero groundtruth tests"
ruff-check = "ruff check groundtruth tests"

format = ["ruff", "black"]
check = ["ruff-check", "black-check", "mypy"]
test = ["pytest", "coverage"]
all = ["format", "check", "test"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]
lint.fixable = ["I"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unreachable = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = "indico.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "munkres.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstractmethod"]
